<resources>
    <string name="app_name">ISKCON Sadhana Sharing</string>
    <string name="WEB_ROOT">http://www.technicalround.com/iss/</string>
    <string name="title_activity_main_devotee">Sadhana Track/Report/Guide</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="string_LIST_SHOW_WEEKS">
        <item>1 Week</item>
        <item>2 Weeks</item>
        <item>3 Weeks</item>
        <item>4 Weeks</item>
    </string-array>
    <string-array name="string_LIST_HOURS">
        <item>12</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
    </string-array>
    <string-array name="string_LIST_MINUTES">
        <item>00</item>
        <item>06</item>
        <item>12</item>
        <item>18</item>
        <item>24</item>
        <item>30</item>
        <item>36</item>
        <item>42</item>
        <item>48</item>
        <item>54</item>
    </string-array>
    <string-array name="string_LIST_TIME_TYPES">
        <item>AM</item>
        <item>PM</item>
    </string-array>
    <string-array name="string_CHANT_QUALITY">
        <item>Select ..</item>
        <item>0. Incomplete</item>
        <item>1. Somehow Completed</item>
        <item>2. Good Effort</item>
        <item>3. Hearing with Heart</item>
    </string-array>
    <string-array name="string_MONTH_NAMES">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string-array name="string_MONTH_DAYS">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>
    <string-array name="LIST_USER_TYPES">
        <item>Select ..</item>
        <item>Student</item>
        <item>Temple Resident</item>
        <item>Unemployed</item>
        <item>Employed</item>
        <item>Housewife</item>
    </string-array>
    <string-array name="LIST_SP_BOOKS">
        <item>Select ..</item>
        <item>Srimad Bhagavatam</item>
        <item>Bhagavad Gita</item>
        <item>Chaitanya Ch.</item>
        <item>Teaching of Queen Kunti</item>
        <item>Teaching of Lord Kapila</item>
        <item>Teaching of Lord Chaitanya</item>
        <item>Science Of Self Realization</item>
        <item>Small Books</item>
    </string-array>
    <string-array name="LIST_COUNTRIES">
        <item>Select ..</item>
        <item>India</item>
        <item>United Kingdom</item>
        <item>United States</item>
        <item>Australia</item>
        <item>Azerbaijan</item>
        <item>Bangladesh</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Bolivia</item>
        <item>Botswana</item>
        <item>Brazil</item>
        <item>Bulgaria</item>
        <item>Burma(Myanmar)</item>
        <item>Canada</item>
        <item>Chile</item>
        <item>Colombia</item>
        <item>Costa Rica</item>
        <item>Croatia</item>
        <item>Czech Republic</item>
        <item>Denmark</item>
        <item>Dominican Republic</item>
        <item>Ecuador</item>
        <item>El Salvador</item>
        <item>Estonia</item>
        <item>Fiji</item>
        <item>Finland</item>
        <item>France</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Ghana</item>
        <item>Guyana</item>
        <item>Hong Kong</item>
        <item>Hungary</item>
        <item>Indonesia</item>
        <item>Ireland</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Ivory Coast</item>
        <item>Japan</item>
        <item>Kenya</item>
        <item>Kyrgyzstan</item>
        <item>Latvia</item>
        <item>Lithuania</item>
        <item>Macedonia</item>
        <item>Malaysia</item>
        <item>Mauritius</item>
        <item>Mexico</item>
        <item>Moldova</item>
        <item>Nepal</item>
        <item>Netherland</item>
        <item>Nigeria</item>
        <item>Norway</item>
        <item>Panamá</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>Scotland</item>
        <item>Singapore</item>
        <item>Slovakia</item>
        <item>South Africa</item>
        <item>Spain</item>
        <item>Sri Lanka</item>
        <item>Suriname</item>
        <item>Swaziland</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Taiwan</item>
        <item>Tajikistan</item>
        <item>Thailand</item>
        <item>Togo</item>
        <item>Uganda</item>
        <item>Ukraine</item>
        <item>Uruguay</item>
        <item>Uzbekistan</item>
        <item>Venezuela</item>
        <item>West Indies</item>
        <item>Zimbabwe</item>
    </string-array>
    <string-array name="LIST_INDIA_CENTERS">
        <item>Agartala</item>
        <item>Ahmedabad</item>
        <item>Ahmednagar</item>
        <item>Akluj</item>
        <item>Aligarh</item>
        <item>Allahabad</item>
        <item>Amravati</item>
        <item>Amritsar</item>
        <item>Anantapur</item>
        <item>Angul</item>
        <item>Aravade</item>
        <item>Aurangabad</item>
        <item>Bahadurgarh</item>
        <item>Bangalore</item>
        <item>Baramati</item>
        <item>Barampeta</item>
        <item>Baroda</item>
        <item>Beed</item>
        <item>Belgaum</item>
        <item>Bhadrak</item>
        <item>Bhopal</item>
        <item>Bhubaneswar</item>
        <item>Bhusawal</item>
        <item>Boisar</item>
        <item>Brahmapur</item>
        <item>Chamorshi</item>
        <item>Chandigarh</item>
        <item>Chennai</item>
        <item>Coimbatore</item>
        <item>Cuttack</item>
        <item>Dabilpur</item>
        <item>Debelpuram</item>
        <item>Denkanikottai</item>
        <item>Dibrugarh</item>
        <item>Durgapur</item>
        <item>Dwaraka</item>
        <item>Dwarka</item>
        <item>Ekachakra</item>
        <item>Faridabad</item>
        <item>Gadei_Giri</item>
        <item>Ghaziabad</item>
        <item>Goa</item>
        <item>Guntur</item>
        <item>Gurgaon</item>
        <item>Guruvayur</item>
        <item>Guwahati</item>
        <item>Habibpur</item>
        <item>Hanamkonda</item>
        <item>Haridaspur</item>
        <item>Haridwar</item>
        <item>Hosur</item>
        <item>Hyderabad</item>
        <item>Imphal</item>
        <item>Indore</item>
        <item>Jaipur</item>
        <item>Jammu</item>
        <item>Jhansi</item>
        <item>Kalewadi</item>
        <item>Kannur</item>
        <item>Kanpur</item>
        <item>Kanyakumari</item>
        <item>Karimganj</item>
        <item>Katra</item>
        <item>Kaundanyapur</item>
        <item>Kaveripattinam</item>
        <item>Khanapur</item>
        <item>Kolhapur</item>
        <item>Kolkata</item>
        <item>Krishnagiri</item>
        <item>Kumbakonam</item>
        <item>Kurukshetra</item>
        <item>Latur</item>
        <item>Lucknow</item>
        <item>Ludhiana</item>
        <item>Madurai</item>
        <item>Mangalore</item>
        <item>Mangaluru</item>
        <item>Mayapur</item>
        <item>Moirang</item>
        <item>Mumbai</item>
        <item>Nagpur</item>
        <item>Nashik</item>
        <item>Nellore</item>
        <item>New_Delhi</item>
        <item>Nigdi</item>
        <item>Noida</item>
        <item>Pakur</item>
        <item>Palghar</item>
        <item>Pandharpur</item>
        <item>Patna</item>
        <item>Pondicherry</item>
        <item>Port_Blair</item>
        <item>Pune</item>
        <item>Puri</item>
        <item>Raipur</item>
        <item>Rajahmundry</item>
        <item>Rajkot</item>
        <item>Ranaghat</item>
        <item>Salem</item>
        <item>Secunderabad</item>
        <item>Silchar</item>
        <item>Siliguri</item>
        <item>Solapur</item>
        <item>Srinagar</item>
        <item>Srirangam</item>
        <item>Surat</item>
        <item>Thiruvananth</item>
        <item>Tirunelveli</item>
        <item>Tirupati</item>
        <item>Udaipur</item>
        <item>Udhampur</item>
        <item>Udupi</item>
        <item>Ujjain</item>
        <item>Vallabh_Vidya</item>
        <item>Vapi</item>
        <item>Varanasi</item>
        <item>Vellore</item>
        <item>Vidyanagar</item>
        <item>Vijayawada</item>
        <item>Visakhapatnam</item>
        <item>Vrindavan</item>
        <item>Warangal</item>
        <item>Yamunanagar</item>
    </string-array>
    <string name="Quote1">Let us utilize our time properly. Time is the greatest asset. Priority of
        tasks defines regulation.
    </string>
    <string name="Quote2">Let us Chant with Attention and Heart. Chanting is our main arm against
        Maya. Krishna\'s protection is invoked by Chanting.
    </string>
    <string name="Quote3">Today\'s sadhana quality depends on previous day. Regulation Starts with
        Sleeping on time.
    </string>
    <string name="Quote4">Hearing the message of Krishna gives us energy to practice other
        principles sincerely.
    </string>
    <string name="Quote5">What a fortune to have the best opportunity to make our life successful
        i.e. reviving our forgotten love for Lord Krishna.
    </string>
    <string name="password_hint">
        <u>Pass. Hint</u>
    </string>
    <string name="password_reset">
        <u>Pass. Reset</u>
    </string>
    <string name="try_as_guest">
        <u>Guest</u>
    </string>
    <string name="register">
        <u>Register</u>
    </string>
    <string name="e_mail_address">E-mail Address</string>
    <string name="password">Password</string>
    <string name="go">GO</string>
</resources>