<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityLogin">

    <LinearLayout
        android:id="@+id/linearLayoutLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        tools:context=".ActivityLogin">

        <EditText
            android:id="@+id/editTextUserId"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail_address" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="16"/>

            <Button
                android:id="@+id/buttonGo"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/my_button"
                android:onClick="performSecurityCheck"
                android:text="@string/go"
                android:textColor="@android:color/white"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="Version: 3.3"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/checkBoxIsAskPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="Remember Password" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/buttonAddUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="addUser"
                android:padding="5dp"
                android:text="@string/register"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorAccent"
                android:textStyle="italic" />


            <TextView
                android:id="@+id/textViewHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink=""
                android:clickable="true"
                android:onClick="passHint"
                android:padding="5dp"
                android:text="@string/password_hint"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorPrimary"
                android:textColorLink="@android:color/black"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/textViewReset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:onClick="passResetDialog"
                android:padding="5dp"
                android:text="@string/password_reset"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="italic" />


            <TextView
                android:id="@+id/buttonGuest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="guestUserLogin"
                android:padding="5dp"
                android:text="@string/try_as_guest"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorAccent"
                android:textStyle="italic" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageViewLogin"
        android:layout_width="match_parent"
        android:layout_alignParentRight="false"
        android:layout_below="@+id/linearLayoutLogin"
        android:adjustViewBounds="false"
        android:scaleType="fitXY"
        android:src="@drawable/login_background_2"
        android:layout_height="match_parent" />

    <ProgressBar
        android:id="@+id/progressBarLogin1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" />

</RelativeLayout>