<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.technicalround.iskconsadhanareport.FragmentOverview">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/layoutIcons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="false"
                    android:layout_alignParentTop="false"
                    android:layout_gravity="center"
                    android:onClick="openDrawer"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <ImageButton
                        android:id="@+id/imageButton2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="openDrawer"
                        android:src="@drawable/fill_card" />

                    <ImageButton
                        android:id="@+id/imageButton3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="openDrawer"
                        android:src="@drawable/history_search" />

                    <ImageButton
                        android:id="@+id/imageButton4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="openDrawer"
                        android:src="@drawable/devotees" />
                </LinearLayout>

                <Button
                    android:id="@+id/buttonDataSync"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/my_button"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="SYNC"
                    android:drawableLeft="@android:drawable/ic_popup_sync"
                    android:visibility="invisible" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textViewWelcome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Welcome"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:id="@+id/linearLayoutReminders"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewSadhanaScore"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:padding="5dp"
                        android:text="Your Guide's E-mail is:" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:layout_marginBottom="5dp"
                        android:background="@android:color/darker_gray" />

                    <TextView
                        android:id="@+id/textViewNews"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="No News !"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Inspiring Words"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="center"
                        android:text="Source: General"
                        android:textColor="@color/colorAccent"
                        android:textSize="10dp" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginBottom="5dp"
                    android:background="@android:color/darker_gray" />

                <HorizontalScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fillViewport="true">

                    <LinearLayout
                        android:id="@+id/linearLayoutQuotes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textViewQuote1"
                            android:layout_width="@dimen/quote_width"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_horizontal"
                            android:padding="@dimen/quote_padding"
                            android:text="@string/Quote1"
                            android:background="@drawable/button_light" />

                        <TextView
                            android:id="@+id/textViewQuote2"
                            android:layout_width="@dimen/quote_width"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_horizontal"
                            android:padding="@dimen/quote_padding"

                            android:text="@string/Quote2"
                            android:background="@drawable/button_light" />

                        <TextView
                            android:id="@+id/textViewQuote3"
                            android:layout_width="@dimen/quote_width"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_horizontal"
                            android:background="@drawable/button_light"
                            android:padding="@dimen/quote_padding"

                            android:text="@string/Quote3" />

                        <TextView
                            android:id="@+id/textViewQuote4"
                            android:layout_width="@dimen/quote_width"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_horizontal"
                            android:background="@drawable/button_light"
                            android:padding="@dimen/quote_padding"

                            android:text="@string/Quote4" />

                        <TextView
                            android:id="@+id/textViewQuote5"
                            android:layout_width="@dimen/quote_width"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_horizontal"
                            android:background="@drawable/button_light"
                            android:padding="@dimen/quote_padding"

                            android:text="@string/Quote5" />
                    </LinearLayout>
                </HorizontalScrollView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Vaishnava Calender"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="center"
                        android:text="UPDATE"
                        android:textColor="@color/colorAccent"
                        android:textSize="12dp"
                        android:visibility="invisible" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:id="@+id/linearLayoutCalender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorGray"
                        android:text="" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/httpProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:visibility="invisible" />

</RelativeLayout>
